[package]
name = "badlands"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/noiser-bundle"]

[dependencies]
bytemuck = { version = "1.25.1", features = ["derive"] }
cavalier_contours = "0.7.0"
env_logger = "0.11.11"
fontdue = "0.9.3"
glam = { version = "0.33.2", features = ["bytemuck"] }
log = "0.4.33"
naga = { version = "30", features = ["wgsl-in"] }
noiser-compiler = { path = "third_party/noiser/noiser-compiler" }
noiser-vm = { path = "third_party/noiser/noiser-vm" }
panes = "0.20.0"
parry2d = "0.29.0"
pathfinding = "4.15.0"
png = "0.18.1"
pollster = "1.0.1"
wesl = "0.4.0"
wgpu = "30.0.0"
winit = "0.30.13"

[build-dependencies]
cc = "1"

[dev-dependencies]
# tests/cpp_tests.rs reuses cc's compiler discovery for the Catch2 binary.
cc = "1"
