[package]
# Named "assets" — no dependency of this crate is itself named "assets", so
# (unlike src/crates/wesl's "wesl_ffi" workaround) there's no Corrosion
# `cargo rustc --package` ambiguity here.
name = "assets"
version = "0.1.0"
edition = "2024"

# Standalone: this crate lives inside the badlands repo tree but is not a
# member of the root Cargo workspace (that workspace's `members` list does
# not include it, and crates/noiser-bundle — a workspace member — isn't even
# checked out in this worktree). The empty [workspace] table below makes it
# its own workspace root so `cargo` commands run against this manifest don't
# error with "current package believes it's in a workspace when it's not".
[workspace]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg"] }
gltf = { version = "1.4", default-features = false }

# Default to panic=abort; Corrosion overrides this back to unwind at the
# CMake link step (RUSTFLAGS=-Cpanic=unwind) so the `catch_unwind` in the
# extern "C" thunks can actually catch panics instead of aborting the process.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
