[package]
# Game-UI feature-lib: flexbox layout (panes) + glyph rasterization (fontdue)
# behind a deliberately coarse C ABI (one call per frame). No dependency of
# this crate is itself named "ui", so — unlike src/crates/wesl's "wesl_ffi"
# workaround — there's no Corrosion `cargo rustc --package` ambiguity.
name = "ui"
version = "0.1.0"
edition = "2024"

# Standalone: this crate lives inside the badlands repo tree but is not a
# member of the root Cargo workspace (that workspace's `members` list does
# not include it, and crates/noiser-bundle — a workspace member — isn't even
# checked out in this worktree). The empty [workspace] table below makes it
# its own workspace root so `cargo` commands run against this manifest don't
# error with "current package believes it's in a workspace when it's not".
[workspace]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
panes = "0.20.0"
fontdue = "0.9.3"

# Default to panic=abort; Corrosion overrides this back to unwind at the
# CMake link step (RUSTFLAGS=-Cpanic=unwind) so the `catch_unwind` in the
# extern "C" thunks can actually catch panics instead of aborting the process.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
